apps/wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: bitnami/wordpress:6
        resources:
          requests:
            cpu: 1000m
          limits:
            cpu: 1000m
        name: wordpress
        ports:
        - containerPort: 8080
          name: wordpress
