apps/wordpress/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "wordpress"
  namespace: "wordpress"
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules:
  - host: "wordpress.airq.nodegroups.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "wordpress"
            port:
              number: 8080
  tls:
  - hosts:
    - "wordpress.airq.nodegroups.com"
    secretName: "wordpress-tls"
